--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,29 +10,39 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/lexend": "^5.1.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@nextui-org/button": "2.0.38",
-    "@nextui-org/code": "2.0.33",
+    "@nextui-org/card": "^2.0.34",
+    "@nextui-org/code": "^2.0.33",
+    "@nextui-org/image": "^2.0.32",
     "@nextui-org/input": "^2.2.5",
     "@nextui-org/kbd": "2.0.34",
     "@nextui-org/link": "2.0.35",
     "@nextui-org/navbar": "2.0.37",
+    "@nextui-org/react": "^2.4.8",
+    "@nextui-org/skeleton": "^2.0.32",
     "@nextui-org/snippet": "2.0.43",
     "@nextui-org/switch": "2.0.34",
     "@nextui-org/system": "2.2.6",
+    "@nextui-org/table": "^2.0.40",
+    "@nextui-org/tabs": "^2.0.37",
     "@nextui-org/theme": "2.2.11",
     "@react-aria/visually-hidden": "3.8.12",
     "@tanstack/react-query": "^5.59.16",
+    "axios": "^1.7.7",
     "clsx": "2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "~11.1.1",
     "jotai": "^2.10.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "6.23.0",
+    "tailwind-merge": "^2.5.4",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.3",
     "zod": "^3.23.8"
